--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
-# Java specific
-*.class
-*.log
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-target/
-.mvn/timing.properties
-.mvn/wrapper/maven-wrapper.properties
-.settings/
-.project
-.classpath
+__pycache__/
+*.pyc
+*.pyo
+venv/
+.env
+*.egg-info/
+dist/
+build/
